Archive2/3d/8caf10516144d2/output
main.cpp: In function ‘int main()’:
main.cpp:63:8: error: ‘void Event<TOwner, Tn>::operator()(TArgn&& ...) [with TArgn = {int}; TOwner = Arf; Tn = {int}]’ is private
   void operator( )( TArgn&&... argn ) {
        ^
main.cpp:142:25: error: within this context
     a.OnWoof( 0xBADCA11 ); 
                         ^
